[gd_scene load_steps=4 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://icons.png" type="Texture" id=2]
[ext_resource path="res://unitcontrol.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Control"]
margin_right = 1028.0
margin_bottom = 637.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="LEVELUP" type="Button" parent="."]
margin_left = 456.0
margin_top = 472.0
margin_right = 552.0
margin_bottom = 528.0
text = "LEVELUP"

[node name="LEVELDOWN" type="Button" parent="."]
margin_left = 456.0
margin_top = 536.0
margin_right = 552.0
margin_bottom = 592.0
text = "LEVELDOWN"

[node name="Button" type="Button" parent="."]
margin_left = 940.0
margin_top = 562.0
margin_right = 1005.0
margin_bottom = 587.0
text = "UPDATE"

[node name="LEVEL" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 472.0
margin_top = 608.0
margin_right = 512.0
margin_bottom = 622.0
text = "LEVEL:"

[node name="Aatrox" parent="." instance=ExtResource( 3 )]
margin_left = 77.0
margin_top = 23.0
margin_right = -891.0
margin_bottom = -534.0

[node name="Ezreal" parent="." instance=ExtResource( 3 )]
margin_left = 150.0
margin_top = 23.0
margin_right = -818.0
margin_bottom = -534.0

[node name="Heimerdinger" parent="." instance=ExtResource( 3 )]
margin_left = 221.0
margin_top = 23.0
margin_right = -747.0
margin_bottom = -534.0

[node name="Karma" parent="." instance=ExtResource( 3 )]
margin_left = 291.0
margin_top = 23.0
margin_right = -677.0
margin_bottom = -534.0

[node name="Leona" parent="." instance=ExtResource( 3 )]
margin_left = 362.0
margin_top = 23.0
margin_right = -606.0
margin_bottom = -534.0

[node name="Nidalee" parent="." instance=ExtResource( 3 )]
margin_left = 432.0
margin_top = 23.0
margin_right = -536.0
margin_bottom = -534.0

[node name="Sejuani" parent="." instance=ExtResource( 3 )]
margin_left = 504.0
margin_top = 23.0
margin_right = -464.0
margin_bottom = -534.0

[node name="Senna" parent="." instance=ExtResource( 3 )]
margin_left = 575.0
margin_top = 23.0
margin_right = -393.0
margin_bottom = -534.0

[node name="Sett" parent="." instance=ExtResource( 3 )]
margin_left = 646.0
margin_top = 23.0
margin_right = -322.0
margin_bottom = -534.0

[node name="Skarner" parent="." instance=ExtResource( 3 )]
margin_left = 717.0
margin_top = 23.0
margin_right = -251.0
margin_bottom = -534.0

[node name="Tahm" parent="." instance=ExtResource( 3 )]
margin_left = 788.0
margin_top = 23.0
margin_right = -180.0
margin_bottom = -534.0

[node name="Taric" parent="." instance=ExtResource( 3 )]
margin_left = 859.0
margin_top = 23.0
margin_right = -109.0
margin_bottom = -534.0

[node name="Vladimir" parent="." instance=ExtResource( 3 )]
margin_left = 930.0
margin_top = 23.0
margin_right = -38.0
margin_bottom = -534.0

[node name="Yone" parent="." instance=ExtResource( 3 )]
margin_left = 930.0
margin_top = 110.0
margin_right = -38.0
margin_bottom = -447.0

[node name="Twitch" parent="." instance=ExtResource( 3 )]
margin_left = 858.0
margin_top = 110.0
margin_right = -110.0
margin_bottom = -447.0

[node name="Tristana" parent="." instance=ExtResource( 3 )]
margin_left = 789.0
margin_top = 110.0
margin_right = -179.0
margin_bottom = -447.0

[node name="Thresh" parent="." instance=ExtResource( 3 )]
margin_left = 647.0
margin_top = 110.0
margin_right = -321.0
margin_bottom = -447.0

[node name="Shen" parent="." instance=ExtResource( 3 )]
margin_left = 719.0
margin_top = 110.0
margin_right = -249.0
margin_bottom = -447.0

[node name="Qiyana" parent="." instance=ExtResource( 3 )]
margin_left = 575.0
margin_top = 110.0
margin_right = -393.0
margin_bottom = -447.0

[node name="Nami" parent="." instance=ExtResource( 3 )]
margin_left = 504.0
margin_top = 110.0
margin_right = -464.0
margin_bottom = -447.0

[node name="Lillia" parent="." instance=ExtResource( 3 )]
margin_left = 432.0
margin_top = 110.0
margin_right = -536.0
margin_bottom = -447.0

[node name="Kayn" parent="." instance=ExtResource( 3 )]
margin_left = 362.0
margin_top = 110.0
margin_right = -606.0
margin_bottom = -447.0

[node name="Jinx" parent="." instance=ExtResource( 3 )]
margin_left = 291.0
margin_top = 110.0
margin_right = -677.0
margin_bottom = -447.0

[node name="Gnar" parent="." instance=ExtResource( 3 )]
margin_left = 218.0
margin_top = 110.0
margin_right = -750.0
margin_bottom = -447.0

[node name="Braum" parent="." instance=ExtResource( 3 )]
margin_left = 148.0
margin_top = 110.0
margin_right = -820.0
margin_bottom = -447.0

[node name="Ashe" parent="." instance=ExtResource( 3 )]
margin_left = 78.0
margin_top = 110.0
margin_right = -890.0
margin_bottom = -447.0

[node name="Anivia" parent="." instance=ExtResource( 3 )]
margin_left = 78.0
margin_top = 198.0
margin_right = -890.0
margin_bottom = -359.0

[node name="Diana" parent="." instance=ExtResource( 3 )]
margin_left = 148.0
margin_top = 198.0
margin_right = -820.0
margin_bottom = -359.0

[node name="Elise" parent="." instance=ExtResource( 3 )]
margin_left = 219.0
margin_top = 198.0
margin_right = -749.0
margin_bottom = -359.0

[node name="Illaoi" parent="." instance=ExtResource( 3 )]
margin_left = 291.0
margin_top = 198.0
margin_right = -677.0
margin_bottom = -359.0

[node name="Lee" parent="." instance=ExtResource( 3 )]
margin_left = 362.0
margin_top = 198.0
margin_right = -606.0
margin_bottom = -359.0

[node name="Lulu" parent="." instance=ExtResource( 3 )]
margin_left = 433.0
margin_top = 198.0
margin_right = -535.0
margin_bottom = -359.0

[node name="Nunu" parent="." instance=ExtResource( 3 )]
margin_left = 504.0
margin_top = 198.0
margin_right = -464.0
margin_bottom = -359.0

[node name="Olaf" parent="." instance=ExtResource( 3 )]
margin_left = 576.0
margin_top = 198.0
margin_right = -392.0
margin_bottom = -359.0

[node name="Ryze" parent="." instance=ExtResource( 3 )]
margin_left = 646.0
margin_top = 198.0
margin_right = -322.0
margin_bottom = -359.0

[node name="Swain" parent="." instance=ExtResource( 3 )]
margin_left = 717.0
margin_top = 198.0
margin_right = -251.0
margin_bottom = -359.0

[node name="Sylas" parent="." instance=ExtResource( 3 )]
margin_left = 788.0
margin_top = 198.0
margin_right = -180.0
margin_bottom = -359.0

[node name="Varus" parent="." instance=ExtResource( 3 )]
margin_left = 860.0
margin_top = 198.0
margin_right = -108.0
margin_bottom = -359.0

[node name="Volibear" parent="." instance=ExtResource( 3 )]
margin_left = 931.0
margin_top = 198.0
margin_right = -37.0
margin_bottom = -359.0

[node name="Corki" parent="." instance=ExtResource( 3 )]
margin_left = 78.0
margin_top = 287.0
margin_right = -890.0
margin_bottom = -270.0

[node name="Hecarim" parent="." instance=ExtResource( 3 )]
margin_left = 148.0
margin_top = 287.0
margin_right = -820.0
margin_bottom = -270.0

[node name="Neeko" parent="." instance=ExtResource( 3 )]
margin_left = 220.0
margin_top = 287.0
margin_right = -748.0
margin_bottom = -270.0

[node name="Ornn" parent="." instance=ExtResource( 3 )]
margin_left = 291.0
margin_top = 287.0
margin_right = -677.0
margin_bottom = -270.0

[node name="Sona" parent="." instance=ExtResource( 3 )]
margin_left = 363.0
margin_top = 287.0
margin_right = -605.0
margin_bottom = -270.0

[node name="Talon" parent="." instance=ExtResource( 3 )]
margin_left = 433.0
margin_top = 287.0
margin_right = -535.0
margin_bottom = -270.0

[node name="Xayah" parent="." instance=ExtResource( 3 )]
margin_left = 503.0
margin_top = 287.0
margin_right = -465.0
margin_bottom = -270.0

[node name="Bard" parent="." instance=ExtResource( 3 )]
margin_left = 78.0
margin_top = 373.0
margin_right = -890.0
margin_bottom = -184.0

[node name="Pyke" parent="." instance=ExtResource( 3 )]
margin_left = 148.0
margin_top = 373.0
margin_right = -820.0
margin_bottom = -184.0

[node name="Soraka" parent="." instance=ExtResource( 3 )]
margin_left = 221.0
margin_top = 373.0
margin_right = -747.0
margin_bottom = -184.0

[node name="Yasuo" parent="." instance=ExtResource( 3 )]
margin_left = 290.0
margin_top = 373.0
margin_right = -678.0
margin_bottom = -184.0

[node name="Zoe" parent="." instance=ExtResource( 3 )]
margin_left = 362.0
margin_top = 373.0
margin_right = -606.0
margin_bottom = -184.0

[node name="Daeja" parent="." instance=ExtResource( 3 )]
margin_left = 77.0
margin_top = 462.0
margin_right = -891.0
margin_bottom = -95.0

[node name="Idas" parent="." instance=ExtResource( 3 )]
margin_left = 148.0
margin_top = 462.0
margin_right = -820.0
margin_bottom = -95.0

[node name="Shi" parent="." instance=ExtResource( 3 )]
margin_left = 220.0
margin_top = 462.0
margin_right = -748.0
margin_bottom = -95.0

[node name="Syfen" parent="." instance=ExtResource( 3 )]
margin_left = 291.0
margin_top = 462.0
margin_right = -677.0
margin_bottom = -95.0

[node name="Shin" parent="." instance=ExtResource( 3 )]
margin_left = 78.0
margin_top = 550.0
margin_right = -890.0
margin_bottom = -7.0

[node name="Aurelion" parent="." instance=ExtResource( 3 )]
margin_left = 149.0
margin_top = 550.0
margin_right = -819.0
margin_bottom = -7.0

[node name="Shyvana" parent="." instance=ExtResource( 3 )]
margin_left = 220.0
margin_top = 550.0
margin_right = -748.0
margin_bottom = -7.0

[node name="Button2" type="Button" parent="."]
margin_left = 764.0
margin_top = 478.0
margin_right = 1013.0
margin_bottom = 553.0
text = "RESET POOL"

[connection signal="pressed" from="LEVELUP" to="." method="_on_LEVELUP_pressed"]
[connection signal="pressed" from="LEVELDOWN" to="." method="_on_LEVELDOWN_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
